[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://player_stat_block.tres" type="Resource" id=2]
[ext_resource path="res://Assets/Textures/light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0, 0, 1, 0.662745, 0, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0352941, 0.341176, 0.0431373, 1 )

[node name="Player" type="KinematicBody2D" groups=["Player", "projectile handler"]]
script = ExtResource( 1 )
stat_block = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-05, 0 )
scale = Vector2( 0.00976564, 20 )
texture = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="FireTimer" type="Timer" parent="."]

[node name="TorchLight2D" type="Light2D" parent="."]
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
layer = 3

[node name="ProgressBar" type="ProgressBar" parent="Control/CanvasLayer"]
margin_left = 30.0
margin_top = 523.0
margin_right = 237.0
margin_bottom = 573.0
custom_styles/fg = SubResource( 4 )
rounded = true

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
